examples/core/errors/type_errors/02_annotation_mismatch.core.tao
// Type Error: Type mismatch
// Trying to use $I32 where $Type is expected (function parameter type)
(x : $I32) -> (x : $Type(1))
